--- a/stylesheets/css/rent.css
+++ b/stylesheets/css/rent.css
@@ -17,19 +17,19 @@ body { width: 100%; overflow-x: hidden; }
 .jumbotron .jumbotron-title p { font-size: 2rem; color: white; font-family: 'NanumSquare', sans-serif; text-align: center; width: 40%; margin-top: 1.5rem; word-break: keep-all; }
 
 .container { width: 100%; position: relative; }
-.container .search-wrapper { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 3% 10%; border-bottom: 1px solid #eaeaea; position: relative; }
-.container .search-wrapper .search-title { width: 50%; }
+.container .search-wrapper { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 3% 12%; border-bottom: 1px solid #eaeaea; position: relative; background-color: #eaeaea; }
+.container .search-wrapper .search-title { width: 55%; }
 .container .search-wrapper .search-title p { font-size: 3.5rem; line-height: 1.5; font-family: 'NanumSquare', sans-serif; color: #606060; }
-.container .search-wrapper .search-date { width: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: 'NanumSquare', sans-serif; color: #606060; }
+.container .search-wrapper .search-date { width: 45%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: 'NanumSquare', sans-serif; color: #606060; }
 .container .search-wrapper .search-date .search-date__input { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 60%; margin-left: 2rem; }
 .container .search-wrapper .search-date .search-date__input .date-input { width: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.container .search-wrapper .search-date .search-date__input .date-input input { width: 3.5em; height: 4rem; border: 1px solid #eaeaea; font-size: 2rem; line-height: 3rem; border-radius: 5px; margin-right: 1rem; text-align: center; color: #606060; }
+.container .search-wrapper .search-date .search-date__input .date-input input { width: 3em; height: 4rem; border: 1px solid #eaeaea; font-size: 2rem; line-height: 3rem; border-radius: 5px; margin-right: 1rem; text-align: center; color: #606060; border: 1px solid #a5a5a5; }
 .container .search-wrapper .search-date .search-date__input .date-input span { font-size: 2.5rem; color: #606060; }
 .container .search-wrapper .search-date .search-date__btn { width: 38%; margin-left: 2%; }
 .container .search-wrapper .search-date .search-date__btn span { color: #2b2b2b; font-size: 1.35rem; padding: 1.35rem 4rem; border-radius: 5rem; background-color: #f7ff5a; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; cursor: pointer; }
 .container .search-wrapper .search-date .search-date__btn span:hover { -webkit-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); }
 .container .rent-wrapper { width: 100%; margin-top: 5rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; }
-.container .rent-wrapper .rent-category { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; }
+.container .rent-wrapper .rent-category { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; }
 .container .rent-wrapper .rent-category .category-tab { width: 17%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; border-bottom: 1px solid #a5a5a5; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 1%; cursor: pointer; }
 .container .rent-wrapper .rent-category .category-tab.current { border-bottom: 1px solid #2ac6ff; }
 .container .rent-wrapper .rent-category .category-tab.current .category-tab__title { color: #2ac6ff; }
@@ -60,9 +60,9 @@ body { width: 100%; overflow-x: hidden; }
 .container .rent-wrapper .rent-item-list { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 .container .rent-wrapper .rent-item-list .item { width: calc(97% / 4); margin-right: 1%; position: relative; margin-bottom: 5rem; }
 .container .rent-wrapper .rent-item-list .item:nth-of-type(4n) { margin-right: 0; }
-.container .rent-wrapper .rent-item-list .item .item-img { width: 100%; height: 30rem; border: 1px solid #a5a5a5; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; position: relative; overflow: hidden; }
+.container .rent-wrapper .rent-item-list .item .item-img { width: 100%; height: 30rem; border: 1px solid #a5a5a5; display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; overflow: hidden; }
 .container .rent-wrapper .rent-item-list .item .item-img:hover .item-img__quickmenu { bottom: 0; }
-.container .rent-wrapper .rent-item-list .item .item-img img { height: 85%; width: auto; position: absolute; top: 7.5%; }
+.container .rent-wrapper .rent-item-list .item .item-img img { height: 85%; width: auto; position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); }
 .container .rent-wrapper .rent-item-list .item .item-img .item-img__quickmenu { width: 100%; position: absolute; bottom: -4rem; display: -webkit-box; display: -ms-flexbox; display: flex; font-family: 'NanumSquare', sans-serif; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .container .rent-wrapper .rent-item-list .item .item-img .item-img__quickmenu .quickmenu-tab { width: 50%; height: 4rem; font-size: 1.35rem; line-height: 4rem; text-align: center; color: #2b2b2b; background-color: #f7ff5a; border-right: 1px solid white; cursor: pointer; }
 .container .rent-wrapper .rent-item-list .item .item-img .item-img__quickmenu .quickmenu-tab:hover { font-weight: 800; }
