--- a/stylesheets/base/_keyframes.scss
+++ b/stylesheets/base/_keyframes.scss
@@ -96,6 +96,22 @@
   100% { transform:translate(0,0); opacity: 1; }
 }
 
+@-webkit-keyframes title-desc {
+  0%   { -webkit-transform:translate(0,20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,0); opacity: 1; }
+}
+@-moz-keyframes title-desc {
+  0%   { -moz-transform:translate(0,20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -moz-transform:translate(0,0); opacity: 1; }
+}
+@keyframes title-desc {
+  0%   { transform:translate(0,20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { transform:translate(0,0); opacity: 1; }
+}
+
 @-webkit-keyframes title-line {
   0%   { height: 0; opacity: 1;  }
   100% { height: 8rem; opacity: 1; }
@@ -242,4 +258,20 @@
 @keyframes gnb-sticky {
   0%   { top: -60px;}
   100% { top: 0; }
+}
+
+@-webkit-keyframes wave {
+  0%   { -webkit-transform:translate(0,20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -webkit-transform:translate(0,0); opacity: 1; }
+}
+@-moz-keyframes wave {
+  0%   { -moz-transform:translate(0,20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { -moz-transform:translate(0,0); opacity: 1; }
+}
+@keyframes wave {
+  0%   { transform:translate(0,20px); opacity: 0;  }
+  50%  { opacity: 1;  }
+  100% { transform:translate(0,0); opacity: 1; }
 }
