--- a/stylesheets/class.scss
+++ b/stylesheets/class.scss
@@ -127,7 +127,10 @@ body {
 				text-align: center;
 				@include flexbox();
 				@include flex-direction(column);
-				@include align-items(center);
+				margin-left: 20%;
+				&:nth-of-type(1) {
+					margin-left: 0;
+				}
 				.icon-tab__img {
 					width: 100%;
 					height: 13rem;
@@ -152,16 +155,22 @@ body {
 					}
 				}
 				.icon-tab__subtitle {
+					width: 100%;
+					text-align: center;
 					margin-top: 3rem;
 					color: $gray3;
 					font-size: 1rem;
 					word-break: keep-all;
+					display: block;
 				}
 				.icon-tab__title {
+					width: 100%;
+					text-align: center;
 					color: $gray2;
 					font-size: 2rem;
 					margin-top: 1.15rem;
 					font-weight: 700;
+					display: block;
 				}
 			}
 		}
@@ -170,6 +179,8 @@ body {
 .container-wave {
 	width: 100%;
 	opacity: 0.5;
+	position: relative;
+	overflow: hidden;
 	img {
 		width: 100%;
 	}
