--- a/stylesheets/css/footer.css
+++ b/stylesheets/css/footer.css
@@ -10,20 +10,22 @@ body { width: 100%; overflow-x: hidden; }
 .footer { width: 100%; position: relative; margin-top: 15vw; }
 .footer .footer-insta { width: 100%; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; }
 .footer .footer-insta .insta-part { width: 60vw; display: -webkit-box; display: -ms-flexbox; display: flex; position: relative; }
-.footer .footer-insta .insta-part .insta-tab { position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; overflow: hidden; }
+.footer .footer-insta .insta-part .insta-tab { position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; overflow: hidden; }
 .footer .footer-insta .insta-part .insta-tab:hover img { -webkit-transform: scale(1.05); -ms-transform: scale(1.05); transform: scale(1.05); }
 .footer .footer-insta .insta-part .insta-tab img { width: 100%; height: auto; position: relative; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.footer .footer-insta .insta-part .insta-tab span { position: absolute; color: white; font-family: 'NanumSquare', sans-serif; font-size: 1.35rem; border: 1px solid white; padding: 1.5rem 4rem; border-radius: 5rem; text-align: center; bottom: 0; margin-bottom: 2rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.footer .footer-insta .insta-part .insta-tab span:hover { background-color: white; color: #2ac6ff; }
+.footer .footer-insta .insta-part .insta-tab p { width: 100%; z-index: 2; position: absolute; text-align: center; bottom: 5rem; left: 0; }
+.footer .footer-insta .insta-part .insta-tab p span { color: white; font-family: 'NanumSquare', sans-serif; font-size: 1.35rem; border: 1px solid white; padding: 1.5rem 4rem; border-radius: 5rem; text-align: center; margin: 0 auto; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.footer .footer-insta .insta-part .insta-tab p span:hover { background-color: white; color: #2ac6ff; }
 .footer .footer-insta .insta-part .insta-tab.pic1 { width: 40vw; height: 40vw; }
 .footer .footer-insta .insta-part .insta-tab.pic2 { width: 40vw; height: 20vw; }
 .footer .footer-insta .insta-part .insta-tab.pic3 { width: 20vw; height: 20vw; }
-.footer .footer-insta .insta-part .pic3-wrapper { width: 20vw; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; position: relative; overflow: hidden; }
-.footer .footer-insta .insta-part .pic3-wrapper .pic3 { width: 20vw; height: 20vw; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; overflow: hidden; }
+.footer .footer-insta .insta-part .pic3-wrapper { width: 20vw; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; position: relative; overflow: hidden; }
+.footer .footer-insta .insta-part .pic3-wrapper .pic3 { width: 20vw; height: 20vw; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; overflow: hidden; }
 .footer .footer-insta .insta-part .pic3-wrapper .pic3:hover img { -webkit-transform: scale(1.05); -ms-transform: scale(1.05); transform: scale(1.05); }
 .footer .footer-insta .insta-part .pic3-wrapper .pic3 img { width: 100%; position: relative; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.footer .footer-insta .insta-part .pic3-wrapper .pic3 span { position: absolute; color: white; font-family: 'NanumSquare', sans-serif; font-size: 1.35rem; border: 1px solid white; padding: 1.5rem 4rem; border-radius: 5rem; text-align: center; bottom: 0; margin-bottom: 2rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.footer .footer-insta .insta-part .pic3-wrapper .pic3 span:hover { background-color: white; color: #2ac6ff; }
+.footer .footer-insta .insta-part .pic3-wrapper .pic3 p { width: 100%; z-index: 2; position: absolute; text-align: center; bottom: 5rem; left: 0; }
+.footer .footer-insta .insta-part .pic3-wrapper .pic3 p span { color: white; font-family: 'NanumSquare', sans-serif; font-size: 1.35rem; border: 1px solid white; padding: 1.5rem 4rem; border-radius: 5rem; text-align: center; margin: 0 auto; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.footer .footer-insta .insta-part .pic3-wrapper .pic3 p span:hover { background-color: white; color: #2ac6ff; }
 .footer .footer-insta .insta-part.small { width: 40vw; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 .footer .footer-info { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-top: 3%; padding-bottom: 2%; background-color: #2ac6ff; }
 .footer .footer-info .footer-logo { width: 6%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
@@ -32,8 +34,9 @@ body { width: 100%; overflow-x: hidden; }
 .footer .footer-info .footer-sns { margin-top: 3rem; height: 8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 .footer .footer-info .footer-sns .sns-tab { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 9rem; position: relative; }
 .footer .footer-info .footer-sns .sns-tab .sns-tab__icon { width: 3.5rem; height: 3.5rem; cursor: pointer; }
-.footer .footer-info .footer-sns .sns-tab .sns-tab__tooltip { position: relative; width: 7rem; padding: 7% 0; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; font-size: 1.15rem; font-weight: 800; letter-spacing: 0.1rem; text-align: center; background-color: #f7ff5a; border-radius: 0.5rem; opacity: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; margin-top: 0.3rem; }
-.footer .footer-info .footer-sns .sns-tab .sns-tab__tooltip:before { content: ''; width: 0.6rem; height: 0.6rem; display: block; border-top: 10px solid #f7ff5a; border-left: 10px solid #f7ff5a; border-radius: 0.5rem; -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); transform: rotate(45deg); position: absolute; top: -0.5rem; }
+.footer .footer-info .footer-sns .sns-tab .sns-tab__tooltip { position: relative; width: 7rem; height: 2.35rem; text-align: center; background-color: #f7ff5a; border-radius: 0.5rem; opacity: 0; margin-top: 0.3rem; }
+.footer .footer-info .footer-sns .sns-tab .sns-tab__tooltip:before { content: ''; width: 0.6rem; height: 0.6rem; display: block; border-top: 10px solid #f7ff5a; border-left: 10px solid #f7ff5a; border-radius: 0.5rem; margin-left: 40%; -webkit-transform: rotate(45deg); -ms-transform: rotate(45deg); transform: rotate(45deg); position: absolute; top: -0.5rem; }
+.footer .footer-info .footer-sns .sns-tab .sns-tab__tooltip span { width: 100%; height: 2.35rem; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; font-size: 1.15rem; line-height: 2.35rem; font-weight: 800; letter-spacing: 0.1rem; z-index: 3; text-align: center; }
 .footer .footer-info .footer-rights { text-align: center; color: white; font-size: 1.15rem; font-family: 'NanumSquare', sans-serif; }
 
 /*# sourceMappingURL=footer.css.map */
