--- a/stylesheets/css/index.css
+++ b/stylesheets/css/index.css
@@ -172,10 +172,11 @@ body { width: 100%; overflow-x: hidden; }
 
 .container { width: 100%; position: relative; margin-top: 5rem; }
 .container .container-title { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.container .container-title .title-line { width: 1px; height: 0; background-color: #2b2b2b; opacity: 0; -webkit-transform-origin: center top; -ms-transform-origin: center top; transform-origin: center top; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.container .container-title .title-line.appear { -webkit-animation: title-line 0.5s ease; animation: title-line 0.5s ease; opacity: 1; height: 8rem; }
+.container .container-title .title-line { width: 100%; height: 8rem; position: relative; }
+.container .container-title .title-line span { display: block; width: 1px; height: 8rem; background-color: #2b2b2b; opacity: 0; margin-left: 50%; -webkit-transform-origin: center top; -ms-transform-origin: center top; transform-origin: center top; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .container-title .title-line.appear span { -webkit-animation: title-line 0.5s ease; animation: title-line 0.5s ease; opacity: 1; height: 8rem; }
 .container .container-title .title { font-family: 'TmonMonsori'; font-size: 2.9rem; text-shadow: -1px -1px 0 #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b, 1px 1px 0 #2b2b2b; margin-top: 2rem; text-align: center; margin-bottom: 5rem; color: white; opacity: 0; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.container .container-title .title.appear { -webkit-animation: title 1s ease; animation: title 1s ease; opacity: 1; }
+.container .container-title .title.appear { -webkit-animation: title 0.5s ease; animation: title 0.5s ease; opacity: 1; }
 .container .container-content { width: 100%; }
 .container .container-content .class-warpper { width: 100%; padding: 0 10%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; }
 .container .container-content .class-warpper .class-type { width: 32.5%; font-family: 'NanumSquare', sans-serif; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; opacity: 0; }
@@ -206,10 +207,10 @@ body { width: 100%; overflow-x: hidden; }
 .container .container-content .gallery-wrapper .gallery-btn { margin-left: 4rem; font-family: 'NanumSquare', sans-serif; color: #2b2b2b; line-height: 1; text-decoration: none; background-color: #f7ff5a; border-radius: 3rem; padding: 1.3rem 4rem; font-size: 1.35rem; }
 .container .container-content .rental-wrapper { width: 100%; height: 40rem; overflow: hidden; position: relative; }
 .container .container-content .rental-wrapper .rental-slide-list { position: relative; width: 100%; }
-.container .container-content .rental-wrapper .rental-slide-list .rental-slide { position: relative; width: 100%; height: 40rem; overflow: hidden; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: none; }
-.container .container-content .rental-wrapper .rental-slide-list .rental-slide img { width: 100%; }
-.container .container-content .rental-wrapper .rental-slide-list .rental-slide p { position: absolute; right: 0; text-align: right; font-size: 7.16rem; color: #f7ff5a; font-family: 'TmonMonsori'; line-height: 1.15; margin-right: 10%; }
-.container .container-content .rental-wrapper .rental-slide-list .rental-slide.active { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-animation: rental-slide 0.5s ease; animation: rental-slide 0.5s ease; }
+.container .container-content .rental-wrapper .rental-slide-list .rental-slide { position: relative; width: 100%; height: 40rem; overflow: hidden; display: none; }
+.container .container-content .rental-wrapper .rental-slide-list .rental-slide img { width: 100%; position: absolute; top: -5%; left: 0; }
+.container .container-content .rental-wrapper .rental-slide-list .rental-slide p { position: absolute; right: 0; top: 0; text-align: right; font-size: 7.16rem; color: #f7ff5a; font-family: 'TmonMonsori'; line-height: 1.15; margin-right: 10%; margin-top: 7%; }
+.container .container-content .rental-wrapper .rental-slide-list .rental-slide.active { display: block; -webkit-animation: rental-slide 0.5s ease; animation: rental-slide 0.5s ease; }
 .container .container-content .rental-wrapper .rental-slide-list .rental-slide.active p { -webkit-animation: rental-slide-letter 1s ease; animation: rental-slide-letter 1s ease; }
 .container .container-content .rental-wrapper .rental-slide-nav { margin-left: 10%; width: 20%; height: 40rem; background-color: #2b2b2b; position: absolute; top: 0; left: 0; }
 .container .container-content .rental-wrapper .rental-slide-nav .slide-nav__tab { width: 100%; height: 25%; display: -webkit-box; display: -ms-flexbox; display: flex; cursor: pointer; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 28%; border-top: 1px solid #606060; background-color: transparent; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
