--- a/stylesheets/css/location.css
+++ b/stylesheets/css/location.css
@@ -55,6 +55,15 @@
 @keyframes letter-appear { 0% { transform: translate(0, 20px); opacity: 0; }
   50% { opacity: 1; }
   100% { transform: translate(0, 0); opacity: 1; } }
+@-webkit-keyframes title-desc { 0% { -webkit-transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -webkit-transform: translate(0, 0); opacity: 1; } }
+@-moz-keyframes title-desc { 0% { -moz-transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { -moz-transform: translate(0, 0); opacity: 1; } }
+@keyframes title-desc { 0% { transform: translate(0, 20px); opacity: 0; }
+  50% { opacity: 1; }
+  100% { transform: translate(0, 0); opacity: 1; } }
 @-webkit-keyframes title-line { 0% { height: 0; opacity: 1; }
   100% { height: 8rem; opacity: 1; } }
 @-moz-keyframes title-line { 0% { height: 0; opacity: 1; }
@@ -149,14 +158,18 @@ body { width: 100%; overflow-x: hidden; }
 .jumbotron .jumbotron-title p { font-size: 2rem; color: white; font-family: 'NanumSquare', sans-serif; text-align: center; width: 40%; margin-top: 1.5rem; word-break: keep-all; }
 
 .container { width: 100%; position: relative; margin-top: 5rem; }
-.container .container-title { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.container .container-title .title-line { width: 1px; height: 0; background-color: #2b2b2b; opacity: 0; -webkit-transform-origin: center top; -ms-transform-origin: center top; transform-origin: center top; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.container .container-title .title-line.appear { -webkit-animation: title-line 0.5s ease; animation: title-line 0.5s ease; opacity: 1; height: 8rem; }
+.container .container-title { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; text-align: center; }
+.container .container-title .title-line { width: 100%; height: 8rem; position: relative; }
+.container .container-title .title-line span { display: block; width: 1px; height: 8rem; background-color: #2b2b2b; opacity: 0; margin-left: 50%; -webkit-transform-origin: center top; -ms-transform-origin: center top; transform-origin: center top; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .container-title .title-line.appear span { -webkit-animation: title-line 0.5s ease; animation: title-line 0.5s ease; opacity: 1; height: 8rem; }
 .container .container-title .title { font-family: 'TmonMonsori'; font-size: 2.9rem; text-shadow: -1px -1px 0 #2b2b2b, 1px -1px 0 #2b2b2b, -1px 1px 0 #2b2b2b, 1px 1px 0 #2b2b2b; margin-top: 2rem; text-align: center; margin-bottom: 5rem; color: white; opacity: 0; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.container .container-title .title.appear { -webkit-animation: title 1s ease; animation: title 1s ease; opacity: 1; }
-.container .container-title .description { text-align: center; width: 40%; font-family: 'NanumSquare', sans-serif; color: #2b2b2b; font-size: 1.2rem; line-height: 1.8; word-break: keep-all; }
-.container .container-title .button { margin-top: 2.5rem; background-color: #f7ff5a; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; font-size: 1.6rem; line-height: 1; font-weight: 700; padding: 1.5rem 5rem; border-radius: 5rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
-.container .container-title .button:hover { -webkit-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); }
+.container .container-title .title.appear { -webkit-animation: title 0.5s ease; animation: title 0.5s ease; opacity: 1; }
+.container .container-title .description { text-align: center; width: 40%; font-family: 'NanumSquare', sans-serif; color: #2b2b2b; font-size: 1.2rem; line-height: 1.8; word-break: keep-all; opacity: 0; }
+.container .container-title .description.appear { -webkit-animation: title-desc 0.5s ease; animation: title-desc 0.5s ease; opacity: 1; }
+.container .container-title .button { margin-top: 3.5rem; width: 100%; height: 5rem; text-align: center; opacity: 0; }
+.container .container-title .button.appear { -webkit-animation: title-desc 0.5s ease; animation: title-desc 0.5s ease; opacity: 1; }
+.container .container-title .button .button-tab { background-color: #f7ff5a; color: #2b2b2b; font-family: 'NanumSquare', sans-serif; font-size: 1.6rem; line-height: 1; font-weight: 700; padding: 1.5rem 5rem; border-radius: 5rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .container-title .button .button-tab:hover { -webkit-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); }
 .container .container-content { width: 100%; position: relative; }
 .container .container-content .location-warpper { width: 100%; height: 50rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; }
 .container .container-content .location-warpper .location-map { width: calc((100% / 6) * 4); height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; overflow: hidden; }
@@ -168,13 +181,11 @@ body { width: 100%; overflow-x: hidden; }
 .container .container-content .location-warpper .location-tab-wrapper .location-tab { width: 100%; height: 14%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; border-top: 1px solid #606060; }
 .container .container-content .location-warpper .location-tab-wrapper .location-tab img { height: 2.2rem; width: auto; }
 .container .container-content .location-warpper .location-tab-wrapper .location-tab p { width: 100%; font-family: 'NanumSquare', sans-serif; color: white; font-size: 1.2rem; margin-left: 1.2rem; word-break: keep-all; }
-.container .container-content .introduce-wrapper { width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; position: relative; }
+.container .container-content .introduce-wrapper { width: 100%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; position: relative; margin-top: 3rem; }
 .container .container-content .introduce-wrapper .introduce-part { width: 100%; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 .container .container-content .introduce-wrapper .introduce-part:nth-of-type(1) { -webkit-transform: translate(0, 0); -ms-transform: translate(0, 0); transform: translate(0, 0); }
-.container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) { -webkit-transform: translate(0, -4rem); -ms-transform: translate(0, -4rem); transform: translate(0, -4rem); }
 .container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc .desc-bg .desc-text { -webkit-transform: translate(2rem, 0); -ms-transform: translate(2rem, 0); transform: translate(2rem, 0); text-align: right; }
 .container .container-content .introduce-wrapper .introduce-part:nth-of-type(2) .introduce-part__desc .desc-bg .desc-text .desc-text__desc { margin-left: 20%; }
-.container .container-content .introduce-wrapper .introduce-part:nth-of-type(3) { -webkit-transform: translate(0, -8rem); -ms-transform: translate(0, -8rem); transform: translate(0, -8rem); }
 .container .container-content .introduce-wrapper .introduce-part .introduce-part__img { width: calc((100% / 6) * 4); height: 40rem; overflow: hidden; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; position: relative; }
 .container .container-content .introduce-wrapper .introduce-part .introduce-part__img img { width: 100%; }
 .container .container-content .introduce-wrapper .introduce-part .introduce-part__img span { position: absolute; top: 0; font-size: 8rem; font-family: 'TmonMonsori'; color: #f7ff5a; z-index: 2; text-align: center; width: 100%; margin-top: 23%; }
