--- a/stylesheets/footer.scss
+++ b/stylesheets/footer.scss
@@ -32,7 +32,6 @@ body {
 			.insta-tab {
 				position: relative;
 				@include flexbox();
-				@include justify-content(center);
 				overflow: hidden;
 				&:hover {
 					img {
@@ -45,22 +44,28 @@ body {
 					position: relative;
 					@include transition(all 0.5s ease);
 				}
-				span {
+				p {
+					width: 100%;
+					z-index: 2;
 					position: absolute;
-					color: $font-white;
-					font-family: 'NanumSquare', sans-serif;
-					font-size: 1.35rem;
-					border: 1px solid $white;
-					padding: 1.5rem 4rem;
-					border-radius: 5rem;
 					text-align: center;
-					bottom: 0;
-					margin-bottom: 2rem; 
-					cursor: pointer;
-					@include transition(all 0.5s ease);
-					&:hover {
-						background-color: $white;
-						color: $blue;
+					bottom: 5rem;
+					left: 0;
+					span {
+						color: $font-white;
+						font-family: 'NanumSquare', sans-serif;
+						font-size: 1.35rem;
+						border: 1px solid $white;
+						padding: 1.5rem 4rem;
+						border-radius: 5rem;
+						text-align: center;
+						margin: 0 auto;						
+						cursor: pointer;
+						@include transition(all 0.5s ease);
+						&:hover {
+							background-color: $white;
+							color: $blue;
+						}
 					}
 				}
 				&.pic1 {
@@ -81,7 +86,7 @@ body {
 				width: 20vw;
 				@include flexbox();
 				@include flex-direction(column);
-				@include align-items(center);
+				//@include align-items(center);
 				position: relative;
 				overflow: hidden;
 				.pic3 {
@@ -89,7 +94,7 @@ body {
 					height: 20vw;
 					position: relative;
 					@include flexbox();
-					@include justify-content(center);
+					//@include justify-content(center);
 					overflow: hidden;
 					&:hover {
 						img {
@@ -101,22 +106,28 @@ body {
 						position: relative;
 						@include transition(all 0.5s ease);
 					}
-					span {
+					p {
+						width: 100%;
+						z-index: 2;
 						position: absolute;
-						color: $font-white;
-						font-family: 'NanumSquare', sans-serif;
-						font-size: 1.35rem;
-						border: 1px solid $white;
-						padding: 1.5rem 4rem;
-						border-radius: 5rem;
 						text-align: center;
-						bottom: 0;
-						margin-bottom: 2rem;
-						cursor: pointer;
-						@include transition(all 0.5s ease);
-						&:hover {
-							background-color: $white;
-							color: $blue;
+						bottom: 5rem;
+						left: 0;
+						span {
+							color: $font-white;
+							font-family: 'NanumSquare', sans-serif;
+							font-size: 1.35rem;
+							border: 1px solid $white;
+							padding: 1.5rem 4rem;
+							border-radius: 5rem;
+							text-align: center;
+							margin: 0 auto;						
+							cursor: pointer;
+							@include transition(all 0.5s ease);
+							&:hover {
+								background-color: $white;
+								color: $blue;
+							}
 						}
 					}
 				}
@@ -168,18 +179,11 @@ body {
 				.sns-tab__tooltip {
 					position: relative;
 					width: 7rem;
-					padding: 7% 0;
-					color: $gray1;
-					font-family: 'NanumSquare', sans-serif;
-					font-size: 1.15rem;
-					font-weight: 800;
-					letter-spacing: 0.1rem;
+					height: 2.35rem;
 					text-align: center;
 					background-color: $yellow;
 					border-radius: 0.5rem;
 					opacity: 0;
-					@include flexbox();
-					@include justify-content(center);
 					margin-top: 0.3rem;
 					&:before {
 						content: '';
@@ -189,9 +193,22 @@ body {
 						border-top: 10px solid $yellow;
 						border-left: 10px solid $yellow;
 						border-radius: 0.5rem;
+						margin-left: 40%;
 						@include transform(rotate(45deg));
 						position: absolute;
 						top: -0.5rem;
+					}
+					span {
+						width: 100%;
+						height: 2.35rem;
+						color: $gray1;
+						font-family: 'NanumSquare', sans-serif;
+						font-size: 1.15rem;
+						line-height: 2.35rem;
+						font-weight: 800;
+						letter-spacing: 0.1rem;
+						z-index: 3;
+						text-align: center;
 					}
 				}
 			}
