--- a/stylesheets/location.scss
+++ b/stylesheets/location.scss
@@ -96,17 +96,27 @@ body {
 		@include flexbox();
 		@include flex-direction(column);
 		@include align-items(center);
+		text-align: center;
 		.title-line {
-			width: 1px;
-			height: 0;
-			background-color: $gray1;
-			opacity: 0;
-			@include transform-origin(center top);
-			@include transition(all 0.5s ease);
-			&.appear {
-				@include animation(title-line 0.5s ease);
-				opacity: 1;
+			width: 100%;
+			height: 8rem;
+			position: relative;
+			span {
+				display: block;
+				width: 1px;
 				height: 8rem;
+				background-color: $gray1;
+				opacity: 0;
+				margin-left: 50%;
+				@include transform-origin(center top);
+				@include transition(all 0.5s ease);
+			}
+			&.appear {
+				span {
+					@include animation(title-line 0.5s ease);
+					opacity: 1;
+					height: 8rem;
+				}
 			}
 		}
 		.title {
@@ -120,7 +130,7 @@ body {
 			opacity: 0;
 			@include transition(all 0.5s ease);
 			&.appear {
-				@include animation(title 1s ease);
+				@include animation(title 0.5s ease);
 				opacity: 1;
 			}
 		}
@@ -132,22 +142,37 @@ body {
 			font-size: 1.2rem;
 			line-height: 1.8;
 			word-break: keep-all;
+			opacity: 0;
+			&.appear {
+				@include animation(title-desc 0.5s ease);
+				opacity: 1;
+			}
 		}
 		.button {
-			margin-top: 2.5rem;
-			background-color: $yellow;
-			color: $gray1;
-			font-family: 'NanumSquare', sans-serif;
-			font-size: 1.6rem;
-			line-height: 1;
-			font-weight: 700;
-			padding: 1.5rem 5rem;
-			border-radius: 5rem;
-			cursor: pointer;
-			@include transition(all 0.5s ease);
-			&:hover {
-				@include box-shadow(0 5px 10px $shadow);
+			margin-top: 3.5rem;
+			width: 100%;
+			height: 5rem;
+			text-align: center;
+			opacity: 0;
+			&.appear {
+				@include animation(title-desc 0.5s ease);
+				opacity: 1;
 			}
+			.button-tab {
+				background-color: $yellow;
+				color: $gray1;
+				font-family: 'NanumSquare', sans-serif;
+				font-size: 1.6rem;
+				line-height: 1;
+				font-weight: 700;
+				padding: 1.5rem 5rem;
+				border-radius: 5rem;
+				cursor: pointer;
+				@include transition(all 0.5s ease);
+				&:hover {
+					@include box-shadow(0 5px 10px $shadow);
+				}
+			}			
 		}
 	}
 	.container-content {
@@ -225,6 +250,7 @@ body {
 			@include box-sizing(border-box);
 			padding: 0 10%;
 			position: relative;
+			margin-top: 3rem;
 			.introduce-part {
 				width: 100%;
 				position: relative;
@@ -234,7 +260,7 @@ body {
 					@include transform(translate(0, 0));
 				}
 				&:nth-of-type(2) {
-					@include transform(translate(0, -4rem));
+					//@include transform(translate(0, -4rem));
 					.introduce-part__desc {
 						.desc-bg {
 							.desc-text {
@@ -248,7 +274,7 @@ body {
 					}
 				}
 				&:nth-of-type(3) {
-					@include transform(translate(0, -8rem));
+					//@include transform(translate(0, -8rem));
 				}
 				.introduce-part__img {
 					width: calc((100% / 6) * 4);
