--- a/stylesheets/rent.scss
+++ b/stylesheets/rent.scss
@@ -94,11 +94,12 @@ body {
 		@include flexbox();
 		@include align-items(center);
 		@include box-sizing(border-box);
-		padding: 3% 10%;
+		padding: 3% 12%;
 		border-bottom: 1px solid $gray4;
 		position: relative;
+		background-color: $gray4;
 		.search-title {
-			width: 50%;
+			width: 55%;
 			p {
 				font-size: 3.5rem;
 				line-height: 1.5;
@@ -107,7 +108,7 @@ body {
 			}
 		}
 		.search-date {
-			width: 50%;
+			width: 45%;
 			@include flexbox();
 			@include align-items(center);
 			font-family: 'NanumSquare', sans-serif;
@@ -122,7 +123,7 @@ body {
 					@include flexbox();
 					@include align-items(center);
 					input {
-						width: 3.5em;
+						width: 3em;
 						height: 4rem;
 						border: 1px solid #eaeaea;
 						font-size: 2rem;
@@ -131,6 +132,7 @@ body {
 						margin-right: 1rem;
 						text-align: center;
 						color: $gray2;
+						border: 1px solid $gray3;
 					}
 					span {
 						font-size: 2.5rem;
@@ -165,6 +167,8 @@ body {
 			width: 100%;
 			@include flexbox();
 			@include justify-content(space-between);
+			@include box-sizing(border-box);
+			padding: 0 10%;
 			.category-tab {
 				width: 17%;
 				@include flexbox();
@@ -315,7 +319,7 @@ body {
 					height: 30rem;
 					border: 1px solid $gray3;
 					@include flexbox();
-					@include justify-content(center);
+					//@include justify-content(center);
 					position: relative;
 					overflow: hidden;
 					&:hover {
@@ -327,7 +331,9 @@ body {
 						height: 85%;
 						width: auto;
 						position: absolute;
-						top: 7.5%;
+						top: 50%;
+						left: 50%;
+						@include transform(translate(-50%, -50%));						
 					}
 					.item-img__quickmenu {
 						width: 100%;
