--- a/stylesheets/class.scss
+++ b/stylesheets/class.scss
@@ -201,35 +201,62 @@ body {
 			padding-top: 0;
 		}
 		&:nth-of-type(2) {
-			.class-info__review {	
+			.class-info__review {
+				.mCustomScrollBox {
+					.mCSB_container {
+						direction: ltr;
+					}
+				}
 				.info-review-card-list {
-					position: relative;
 					@include flex-direction(row);
+					left: 0;
 					.review-card {
 					}
 				}
 			}
 			.class-info__cont {
-				margin-left: 10%;
-				margin-right: 0;
+				margin-left: 7%;
+				margin-right: 3%;
 			}
 		}
 		.class-info__review {
+			display: inline-block;
 			width: 50%;
 			height: 45rem;
-			overflow-x: scroll;
-			overflow-y: hidden;
+			position: relative;
+			overflow: hidden;
+			.mCustomScrollBox {
+				.mCSB_container {
+					direction: rtl;
+				}
+			}
 			.info-review-card-list {
 				@include flexbox();
-				@include flex-direction(row-reverse);
-				position: relative;
-				//width: calc(72vw + 10rem);
+				@include flex-direction(row);
+				overflow-x: auto;
+				overflow-y: hidden;
+				position: absolute;
+				top: 0;
+				height: 45rem;
+				width: 100vw;				
 				.review-card {
-					width: 18vw;
+					width: 18%;
 					height: 40rem;
 					position: relative;
 					margin-left: 2rem;
+					margin-top: 2rem;
 					@include flex(0 0 auto);
+					direction: ltr;
+					@include transition(all 0.5s ease);
+					opacity: 0;
+					&:hover {
+						@include transform(translate(0, -20px));
+						@include box-shadow(0 5px 10px $shadow);
+					}
+					&.appear{
+						@include animation(title 0.5s ease);
+						opacity: 1;
+					}
 					.card-img {
 						width: 100%;
 						height: 100%;
@@ -253,6 +280,7 @@ body {
 					}
 					.card-cont {
 						width: 100%;
+						height: 100%;
 						position: absolute;
 						top: 0;
 						left: 0;
@@ -297,7 +325,8 @@ body {
 		}
 		.class-info__cont {
 			width: 40%;
-			margin-right: 10%;
+			margin-left: 3%;
+			margin-right: 7%;
 			@include flexbox();
 			@include flex-direction(column);
 			@include align-items(center);
@@ -307,9 +336,26 @@ body {
 				@include flex-direction(column);
 				@include align-items(center);
 				.text-title-line {
-					width: 1px;
+					width: 100%;
 					height: 8rem;
-					background-color: $gray1;
+					position: relative;
+					span {
+						display: block;
+						width: 1px;
+						height: 8rem;
+						background-color: $gray1;
+						opacity: 0;
+						margin-left: 50%;
+						@include transform-origin(center top);
+						@include transition(all 0.5s ease);
+					}
+					&.appear {
+						span {
+							@include animation(title-line 0.5s ease);
+							opacity: 1;
+							height: 8rem;
+						}
+					}
 				}
 				.text-title {
 					font-family: 'TmonMonsori';
@@ -319,6 +365,12 @@ body {
 					text-align: center;
 					margin-bottom: 2rem;
 					color: $class-bg;
+					opacity: 0;
+					@include transition(all 0.5s ease);
+					&.appear {
+						@include animation(title 0.5s ease);
+						opacity: 1;
+					}
 				}
 				.text-desc {
 					width: 50%;
@@ -328,6 +380,11 @@ body {
 					line-height: 1.5;
 					word-break: keep-all;
 					text-align: center;
+					opacity: 0;
+					&.appear {
+						@include animation(class-type 0.5s ease);
+						opacity: 1;
+					}
 				}
 			}
 			.info-cont__benefit {
@@ -340,6 +397,11 @@ body {
 					@include flexbox();
 					@include flex-direction(column);
 					@include align-items(center);
+					opacity: 0;
+					&.appear {
+						@include animation(class-type 0.5s ease);
+						opacity: 1;
+					}
 					img {
 						height: 5rem;
 					}
@@ -349,18 +411,21 @@ body {
 						text-align: center;
 						font-size: 1.35rem;
 						margin-top: 1.35rem;
+						display: block;
+						width: 100%;
 					}
 				}
 			}
 			.info-cont__btn {
 				margin-top: 4rem;
 				width: 100%;
-				@include flexbox();
-				@include justify-content(center);
+				height: 6rem;
 				text-decoration: none;
+				display: block;
 				.btn-name {
 					font-family: 'NanumSquare', sans-serif;
 					font-size: 1.35rem;
+					line-height: 2.5;
 					font-weight: 800;
 					color: $gray1;
 					text-align: center;
@@ -369,6 +434,11 @@ body {
 					border-radius: 5rem;
 					text-decoration: none;
 					@include transition(all 0.5s ease);
+					margin-left: 35%;
+					opacity: 0;
+					&.appear {
+						opacity: 1;
+					}
 					&:hover {
 						@include box-shadow(0 5px 15px $shadow);
 					}
@@ -388,7 +458,7 @@ body {
 		position: relative;
 		@include flexbox();
 		.cost-tab {
-			width: 19vw;
+			width: 20%;
 			@include flexbox();
 			@include flex-direction(column);
 			@include align-items(center);
@@ -421,19 +491,21 @@ body {
 				width: 100%;
 				height: 12rem;
 				position: relative;
-				@include flexbox();
-				@include justify-content(center);
+				//@include flexbox();
+				//@include justify-content(center);
 				.cost-tab__icon-icon {
 					width: 70%;
 					height: auto;
 					position: absolute;
 					bottom: 3rem;
+					margin-left: 15%;
 				}
 				.cost-tab__icon-effect {
 					width: 80%;
 					height: auto;
 					position: absolute;
 					top: 0;
+					left: 10%;
 				}
 				.cost-tab__icon-title {
 					font-size: 1.35rem;
@@ -481,6 +553,7 @@ body {
 						font-size: 1.15rem;
 						line-height: 3rem;
 						margin-right: 1rem;
+						display: inline-block;
 					}
 				}
 			}
@@ -546,6 +619,8 @@ body {
 				font-family: 'NanumSquare', sans-serif;
 				color: $gray2;
 				font-size: 2.5rem;
+				width: 100%;
+				display: block;
 			}
 			.result-money {
 				font-family: 'TmonMonsori';
@@ -553,6 +628,8 @@ body {
 				margin-top: 1rem;
 				font-size: 4.5rem;
 				margin-bottom: 1rem;
+				width: 100%;
+				display: block;
 			}
 		}
 		.cost-final__next {
@@ -561,24 +638,31 @@ body {
 			@include box-sizing(border-box);
 			padding-left: 10%; 
 			margin-top: 2rem;
+			position: relative;
 			.next-reset {
-				width: 20%;
+				width: 25%;
 				margin-right: 2%;
 				color: $font-white;
 				background-color: $gray2;
-				padding: 1.35rem;
+				padding-top: 1.35rem;
+				padding-bottom: 1.35rem;
 				font-size: 1.35rem;
 				text-align: center;
 				cursor: pointer;
+				display: inline-block;
+				position: relative;
 			}
 			.next-step {
-				width: 78%;
+				width: 73%;
 				color: $gray1;
 				background-color: $yellow;
-				padding: 1.35rem;
+				padding-top: 1.35rem;
+				padding-bottom: 1.35rem;
 				font-size: 1.35rem;
 				text-align: center;
 				cursor: pointer;
+				display: inline-block;
+				position: relative;
 			}
 		}
 	}
