--- a/stylesheets/css/rent.css
+++ b/stylesheets/css/rent.css
@@ -20,24 +20,26 @@ body { width: 100%; overflow-x: hidden; }
 .container .search-wrapper { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 3% 12%; border-bottom: 1px solid #eaeaea; position: relative; background-color: #eaeaea; }
 .container .search-wrapper .search-title { width: 55%; }
 .container .search-wrapper .search-title p { font-size: 3.5rem; line-height: 1.5; font-family: 'NanumSquare', sans-serif; color: #606060; }
-.container .search-wrapper .search-date { width: 45%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: 'NanumSquare', sans-serif; color: #606060; }
-.container .search-wrapper .search-date .search-date__input { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 60%; margin-left: 2rem; }
+.container .search-wrapper .search-date { width: 45%; height: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: 'NanumSquare', sans-serif; color: #606060; }
+.container .search-wrapper .search-date .search-date__input { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; width: 60%; margin-left: 2rem; height: 100%; }
 .container .search-wrapper .search-date .search-date__input .date-input { width: 50%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 .container .search-wrapper .search-date .search-date__input .date-input input { width: 3em; height: 4rem; border: 1px solid #eaeaea; font-size: 2rem; line-height: 3rem; border-radius: 5px; margin-right: 1rem; text-align: center; color: #606060; border: 1px solid #a5a5a5; }
 .container .search-wrapper .search-date .search-date__input .date-input span { font-size: 2.5rem; color: #606060; }
-.container .search-wrapper .search-date .search-date__btn { width: 38%; margin-left: 2%; }
-.container .search-wrapper .search-date .search-date__btn span { color: #2b2b2b; font-size: 1.35rem; padding: 1.35rem 4rem; border-radius: 5rem; background-color: #f7ff5a; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; cursor: pointer; }
+.container .search-wrapper .search-date .search-date__btn { width: 38%; height: 100%; margin-left: 2%; display: inline-block; }
+.container .search-wrapper .search-date .search-date__btn span { color: #2b2b2b; font-size: 1.35rem; padding: 1.35rem 4rem; border-radius: 5rem; background-color: #f7ff5a; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; cursor: pointer; display: inline-block; }
 .container .search-wrapper .search-date .search-date__btn span:hover { -webkit-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); -moz-box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); box-shadow: 0 5px 10px rgba(40, 40, 40, 0.7); }
 .container .rent-wrapper { width: 100%; margin-top: 5rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; }
-.container .rent-wrapper .rent-category { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; }
-.container .rent-wrapper .rent-category .category-tab { width: 17%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; border-bottom: 1px solid #a5a5a5; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 1%; cursor: pointer; }
+.container .rent-wrapper .rent-category { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 10%; }
+.container .rent-wrapper .rent-category .category-tab { width: 17.6%; margin-left: 3%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; border-bottom: 1px solid #a5a5a5; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 1%; cursor: pointer; }
+.container .rent-wrapper .rent-category .category-tab:nth-of-type(1) { margin-left: 0; }
 .container .rent-wrapper .rent-category .category-tab.current { border-bottom: 1px solid #2ac6ff; }
 .container .rent-wrapper .rent-category .category-tab.current .category-tab__title { color: #2ac6ff; }
 .container .rent-wrapper .rent-category .category-tab.current .category-tab__icon { color: #2ac6ff; }
-.container .rent-wrapper .rent-category .category-tab .category-tab__title { width: 80%; text-align: center; color: #a5a5a5; font-size: 1.35rem; }
-.container .rent-wrapper .rent-category .category-tab .category-tab__icon { width: 20%; color: #a5a5a5; font-size: 1.35rem; text-align: center; }
-.container .rent-wrapper .rent-color { width: 100%; margin-top: 4rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 25%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; position: relative; }
-.container .rent-wrapper .rent-color .color-tab { width: 4rem; height: 4rem; border-radius: 4rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border: 1px solid white; }
+.container .rent-wrapper .rent-category .category-tab .category-tab__title { width: 80%; text-align: center; color: #a5a5a5; font-size: 1.35rem; font-family: 'NanumSquare', sans-serif; display: inline-block; }
+.container .rent-wrapper .rent-category .category-tab .category-tab__icon { width: 20%; color: #a5a5a5; font-size: 1.35rem; text-align: center; font-family: 'NanumSquare', sans-serif; display: inline-block; }
+.container .rent-wrapper .rent-color { width: 100%; margin-top: 4rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: calc((100% - 58rem) / 2); padding-right: calc((100% - 58rem) / 2); display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; position: relative; }
+.container .rent-wrapper .rent-color .color-tab { width: 4rem; height: 4rem; border-radius: 4rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border: 1px solid white; margin-left: 2rem; }
+.container .rent-wrapper .rent-color .color-tab:nth-of-type(1) { margin-left: 0; }
 .container .rent-wrapper .rent-color .color-tab:hover { opacity: 0.7; }
 .container .rent-wrapper .rent-color .color-tab.current { border: 1px solid #2ac6ff; }
 .container .rent-wrapper .rent-color .color-tab .color-tab__color { width: 2.5rem; height: 2.5rem; border-radius: 2.5rem; }
@@ -52,9 +54,9 @@ body { width: 100%; overflow-x: hidden; }
 .container .rent-wrapper .rent-color .color-tab .color-tab__color.color-09 { background-color: #fff; border: 1px solid #a5a5a5; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .container .rent-wrapper .rent-color .color-tab .color-tab__color.color-10 { background-color: #2b2b2b; }
 .container .rent-wrapper .rent-result { width: 100%; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
-.container .rent-wrapper .rent-result .result-title { width: 100%; text-align: center; font-size: 2rem; margin-top: 3rem; margin-bottom: 3rem; color: #606060; }
+.container .rent-wrapper .rent-result .result-title { width: 100%; text-align: center; font-size: 2rem; margin-top: 3rem; margin-bottom: 3rem; color: #606060; font-family: 'NanumSquare', sans-serif; }
 .container .rent-wrapper .rent-result .result-option { width: 100%; margin-bottom: 2rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
-.container .rent-wrapper .rent-result .result-option .option { font-size: 1.15rem; line-height: 1.5; border-bottom: 1px solid #606060; color: #606060; opacity: 0.5; margin-left: 1rem; margin-right: 1rem; cursor: pointer; font-weight: 700; }
+.container .rent-wrapper .rent-result .result-option .option { font-size: 1.15rem; line-height: 1.5; border-bottom: 1px solid #606060; color: #606060; opacity: 0.5; margin-left: 1rem; margin-right: 1rem; cursor: pointer; font-weight: 700; font-family: 'NanumSquare', sans-serif; }
 .container .rent-wrapper .rent-result .result-option .option:hover { opacity: 0.8; }
 .container .rent-wrapper .rent-result .result-option .option.current { opacity: 1; }
 .container .rent-wrapper .rent-item-list { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
@@ -68,12 +70,12 @@ body { width: 100%; overflow-x: hidden; }
 .container .rent-wrapper .rent-item-list .item .item-img .item-img__quickmenu .quickmenu-tab:hover { font-weight: 800; }
 .container .rent-wrapper .rent-item-list .item .item-img .item-img__quickmenu .quickmenu-tab:nth-of-type(2) { border-right: none; }
 .container .rent-wrapper .rent-item-list .item .item-info { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: 'NanumSquare', sans-serif; color: #606060; }
-.container .rent-wrapper .rent-item-list .item .item-info .info-title { font-size: 1.35rem; font-weight: 700; text-align: center; width: 80%; word-break: keep-all; margin-top: 2.5rem; margin-bottom: 1rem; }
+.container .rent-wrapper .rent-item-list .item .item-info .info-title { font-size: 1.35rem; font-weight: 700; text-align: center; width: 80%; word-break: keep-all; margin-top: 2.5rem; margin-bottom: 1rem; display: block; }
 .container .rent-wrapper .rent-item-list .item .item-info .info-spec { width: 30%; display: -webkit-box; display: -ms-flexbox; display: flex; margin-top: 0.4rem; color: #a5a5a5; }
-.container .rent-wrapper .rent-item-list .item .item-info .info-spec .info-spec__unit { width: 50%; font-size: 1.15rem; }
-.container .rent-wrapper .rent-item-list .item .item-info .info-spec .info-spec__value { width: 50%; font-size: 1.15rem; }
+.container .rent-wrapper .rent-item-list .item .item-info .info-spec .info-spec__unit { width: 50%; font-size: 1.15rem; display: inline-block; }
+.container .rent-wrapper .rent-item-list .item .item-info .info-spec .info-spec__value { width: 50%; font-size: 1.15rem; display: inline-block; }
 .container .rent-wrapper .rent-more { width: 100%; text-align: center; }
-.container .rent-wrapper .rent-more span { font-size: 1.35rem; color: #2ac6ff; padding: 1rem 4rem; border: 1px solid #2ac6ff; border-radius: 4rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.container .rent-wrapper .rent-more span { font-size: 1.35rem; color: #2ac6ff; padding: 1rem 4rem; border: 1px solid #2ac6ff; border-radius: 4rem; cursor: pointer; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; font-family: 'NanumSquare', sans-serif; }
 .container .rent-wrapper .rent-more span:hover { background-color: #2ac6ff; color: white; }
 
 .shopbag { width: 5rem; height: 15rem; background-color: #f7ff5a; position: fixed; top: 20%; right: 0; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
