--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -14,11 +14,6 @@ body {
 	width: 100%;
 	overflow-x: hidden;
 }
-.og {
-	width: 0;
-	height: 0;
-	display: none;
-}
 .visual {
 	width: 100%;
 	height: calc(100vh - 85px);
@@ -30,202 +25,311 @@ body {
 		position: relative;
 		.visual-slide {
 			display: none;
+			@include flex-direction(column);
 			width: 100%;
 			height: 100%;
 			position: relative;
 			&.current {
-				display: block;
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
 				@include flexbox();
-				.slide-main {
-					.slide-main__bg {
-						img {
-							@include animation(slide-main-appear 1s ease);
-							opacity: 1;
-						}
-					}
-					.slide-main__cont {
-						.cont-title {
-							@include animation(letter-appear 1.5s ease);
-							opacity: 1;
-						}
-						.cont-desc {
-							@include animation(letter-appear 1.5s ease);
-							opacity: 1;
-						}
-						.cont-btn {
-							@include animation(letter-appear 1.5s ease);
-							opacity: 1;
-						}
-					}
-				}
-				.slide-sub {
-					img {
-						@include animation(slide-sub-appear 1s ease);
-					}
-				}
 			}
-			.slide-main {
-				@include box-sizing(border-box);
-				width: calc(((100% - 170px) / 6)*5 + 85px);
-				height: 100%;
+			.visual-slide__top {
+				@include flexbox();
+				width: 100%;
+				height: 70%;
 				position: relative;
-				.slide-main__bg {
-					width: 100%;
+				.top-main-slide {
+					width: calc(((100% - 170px) / 6)*5 + 85px);
+					height: 100%;
+					position: relative;
+					.main-slide-img {
+						width: 100%;
+						height: 100%;
+						position: relative;
+						.main-slide-wrapper {
+							width: 100%;
+							height: 100%;
+							position: relative;
+							overflow: hidden;
+							&.current {
+								img {
+									@include animation(main-slide-img 1s ease);
+								}
+								.main-slide-img__cover {
+									@include animation(main-slide-img__cover 0.5s ease);
+									width: 0;
+								}
+							}
+							img {
+								height: auto;
+								width: 100%;
+								position: absolute;
+								top: 0;
+								right: 0;
+							}
+							.main-slide-img__cover {
+								width: 100%;
+								height: 100%;
+								background-color: $white;
+								position: absolute;
+								top: 0;
+								right: 0;
+								@include transition(all 0.5s ease);
+								@include transform-origin(right);						
+							}
+						}
+					}
+					.main-slide-num {
+						width: 10rem;
+						height: 10rem;
+						position: absolute;
+						right: 0;
+						top: 50%;
+						@include transform(translate(50%,-50%));
+						background-color: $white;
+						z-index: 3;
+						&.current {
+							&:after {
+								@include animation(num-box 1s ease);
+								width:1rem;
+							}
+						}
+						&:after {
+							content: '';
+							width: 0;
+							height: 100%;
+							position: absolute;
+							top: 0;
+							right: -1rem;
+							display: inline-block;
+							background-color: $yellow;
+							@include transform-origin(0% 50%);
+						}
+						.main-slide-num__box {
+							width: 4.5rem;
+							height: 4.5rem;
+							margin-left: 2.75rem;
+							margin-top: 2.75rem;
+							position: relative;
+							span {
+								font-size: 4.5rem;
+								line-height: 1;
+								color: $gray1;
+								width: 100%;
+								text-align: center;
+								font-family: 'Teko', sans-serif;
+							}
+						}
+					}
+				}
+				.top-wave-text {
+					width: calc(((100% - 170px) / 6) + 85px);
 					height: 100%;
 					position: relative;
 					overflow: hidden;
-					display: inline-block;
-					//@include flexbox();
-					//@include align-items(center);
-					img {
-						height: 120%;
-						position: absolute;
-						right: 0;
-						top: -10%;
-					}
-				}
-				.slide-main__cont {
-					width: 50%;
-					height: 100%;
-					@include dark-gradient();
-					position: absolute;
-					top: 0;
-					left: 0;
-					@include flexbox();
-					@include flex-direction(column);
-					@include justify-content(center);
-					font-family: 'NanumSquare', sans-serif;
-					.cont-title {
-						color: $font-white;
-						font-size: 4.2rem;
-						margin-left: $margin;
-						margin-top: 6rem;
-						@include animation(letter-appear 1.5s ease);
-					}
-					.cont-desc {
-						color: $font-white;
-						font-size: 1.35rem;
-						margin-left: $margin;
-						margin-top: 2.2rem;
-						font-weight: 300;
-						@include animation(letter-appear 1.5s ease);
-					}
-					.cont-btn {
-						margin-top: 6.5rem;					
-						margin-left: $margin;
-						display: inline-block;
+					background-color: $white;
+					.wave-text-wrapper {
 						width: 100%;
-						cursor: pointer;
-						@include animation(letter-appear 1.5s ease);
-						&:hover {
-							.cont-btn__name {
-								color: $blue;
-								background-color: $white;
+						height: 100%;
+						@include filter(blur(5px) contrast(40));
+						overflow: hidden;
+						position: relative;
+						&.current {
+							.wave-text {
+								@include animation(rental-slide 1s ease);
+								opacity: 1;
+							}
+							.wave-text-cover {
+								@include animation(wave-text-cover 1.5s ease);
+								left: 100%;
 							}
 						}
-						.cont-btn__name {
-							color: $font-white;
-							font-size: 1.35rem;
-							font-weight: 700;
-							border: 1px solid $white;
-							padding: 1.5rem 5rem;
-							border-radius: 2.5rem;
-							@include transition(all 0.5s ease);
+						.wave-text {
+							width: calc(70vh - 85px);
+							font-family: 'TmonMonsori'; 
+							color: $yellow;
+							font-size: 9.5rem;
+							letter-spacing: 2rem;
+							position: relative;
+							text-align: center;
+							@include transform(rotate(-90deg) translate(-35%, 40%));
+							background-color: $white;
+							opacity: 0;
 						}
-					}
-				}
-				.slide-num {
-					width: 10rem;
-					height: 10rem;
-					background-color: $white;
-					top: 0;
-					right: 0;
-					position: absolute;
-					z-index: 2;
-					@include transform(translate(50%, 50%));
-					@include flexbox();
-					@include justify-content(center);
-					@include align-items(center);
-					span {
-						font-size: 4.5rem;
-						color: $gray1;
-						text-align: center;
-						font-family: 'Teko', sans-serif;
-						margin-top: 0.5rem;
+						.wave-text-cover {
+							width: 100%;
+							height: 100%;
+							background-color: $yellow;
+							position: absolute;
+							top: 0;
+							left: 100%;
+						}
 					}
 				}
 			}
-			.slide-sub {
-				width: calc(((100% - 170px) / 6) + 85px);
-				height: 70%;
+			.visual-slide__bottom {
+				@include flexbox();
+				width: 100%;
+				height: 30%;
 				position: relative;
-				img {
+				.bottom-main-cont {
+					@include box-sizing(border-box);
+					width: calc(((100% - 170px) / 6)*5 + 85px);
 					height: 100%;
-					width: auto;
-					position: absolute;
-					top: 0;
-					left: 0;
+					display: block;
+					padding: 3rem 85px 0 85px;
+					position: relative;
+					&.current {
+						.main-cont__title {
+							@include animation(ltr-20px 1s ease);
+							opacity: 1;
+							
+						}
+						.main-cont__desc {
+							@include animation(ltr-20px 1s ease);
+							opacity: 1;
+						}	
+					}			
+					.main-cont__title {
+						@include flexbox();
+						width: 100%;
+						height: 5rem;
+						position: relative;
+						opacity: 0;
+						.title-text {
+							color: $gray1;
+							font-family: 'TmonMonsori'; 
+							font-size: 3rem;
+							line-height: 3.15rem;
+							width: 22%;
+							@include transition(all 0.5s ease);
+						}
+						.title-btn {
+							margin-left: 2rem;
+							width: 20rem;
+							span {
+								font-family: 'NanumSquare', sans-serif;
+								font-size: 1.15rem;
+								line-height: 1;
+								color: $blue;
+								border: 1px solid $blue;
+								padding: 1rem 2.5rem;
+								display: inline-block;
+								border-radius: 5rem;
+								cursor: pointer;
+								@include transition(all 0.5s ease);
+								background-color: transparent;
+								&:hover {
+									background-color: $blue;
+									color: $font-white;
+								}
+							}
+						}
+					}
+					.main-cont__desc {
+						position: relative;
+						width: 30%;
+						word-break: keep-all;
+						margin-top: 1rem;
+						font-size: 1.15rem;
+						line-height: 1.5;
+						font-family: 'NanumSquare', sans-serif;
+						color: $gray2;
+						opacity: 0;
+					}
+					.main-cont__bar {
+						width: 100%;
+						height: 1rem;
+						position: absolute;
+						bottom: 0;
+						left: 0;
+						background-color: $white;
+						&.current {
+							&:after {
+								@include animation(loading-bar 5s linear);
+								width: 100%;
+							}
+						}
+						&:after {
+							content: '';
+							width: 0%;
+							height: 100%;
+							position: absolute;
+							top: 0;
+							left: 0;
+							background-color: $yellow;
+						}
+					}
+				}			
+				.bottom-sub-slide {
+					width: calc(((100% - 170px) / 6) + 85px);
+					height: 100%;
+					position: relative;
+					overflow: hidden;
+					z-index: 3;
+					&.current {
+						img {
+							@include animation(sub-slide-img 0.5s ease);
+							opacity: 1;
+						}
+						.sub-slide__cover {
+							@include animation(main-slide-img__cover 0.5s ease);
+							width: 0;
+						}
+					}
+					img {
+						width: 100%;
+						position: absolute;
+						top: 0;
+						left: 0;
+						opacity: 0;
+					}
+					.sub-slide__cover {
+						width: 100%;
+						height: 100%;
+						background-color: $white;
+						position: absolute;
+						top: 0;
+						left: 0;
+						@include transform-origin(left);
+					}
 				}
 			}
 		}		
 	}
 	.visual-dir {
-		width: calc(((100% - 170px) / 6) + 85px);
-		height: 30%;
+		width: 170px;
+		height: 85px;
 		position: absolute;
-		bottom: 0;
-		right: 0;
-		background-color: $gray1;
+		right: calc(((100% - 170px) / 6) + 85px);
+		bottom: calc(30% - 85px);
 		@include flexbox();
-		@include animation(dir-appear 1s ease);
 		.dir-btn {
-			width: 50%;
-			height: 100%;
+			width: 85px;
+			height: 85px;
 			background-color: $gray1;
-			@include flexbox();
-			@include flex-direction(column);
-			@include align-items(center);
-			@include justify-content(center);
-			@include transition(all 0.5s ease);
 			cursor: pointer;
+			opacity: 0;
+			@include transition(all 0.5s ease);
+			&.current {
+				@include animation(dir-appear 1s ease);
+				opacity: 1;
+			}
 			&:hover {
 				background-color: $gray2;
 			}
 			img {
-				width: 40%;
+				width: 50%;
 				height: auto;
-			}
-			.dir-btn__name {
-				color: $font-white;
-				font-size: 1.35rem;
-				margin-top: 1.35rem;
-				text-align: center;
-				@include animation(dir-appear 1.5s ease);
+				margin-left: 25%;
+				margin-top: 25%;
 			}
 			&.prev {
 				img {
 					@include transform(rotate(180deg));
-					@include animation(dir-icon-appear 1.5s ease);
 				}
 			}
-			&.next {
-				img {
-					@include animation(dir-appear 1.5s ease);
-				}
-			}
-		}
-		.dir-line {
-			width: 1px;
-			height: 100%;
-			background-color: $gray2;
-			@include transform-origin(100%, 100%);
-			@include animation(dir-line 1.5s ease);
-		}
+			&.next {}
+		}	
 	}
 }
 .container {
@@ -284,12 +388,16 @@ body {
 			@include flexbox();
 			@include justify-content(space-between);
 			.class-type {
-				width: 32.5%;
+				width: 32%;
+				margin-left: calc(4% / 3);
 				font-family: 'NanumSquare', sans-serif;
 				@include flexbox();
 				@include flex-direction(column);
 				@include align-items(center);
 				opacity: 0;
+				&:nth-of-type(1) {
+					margin-left: 0;
+				}
 				&.appear {
 					@include animation(class-type 1s ease);
 					opacity: 1;
@@ -314,11 +422,13 @@ body {
 					margin-top: 2.5rem;
 					color: $gray1;
 					font-weight: 300;
+					display: inline-block;
 				}
 				.class-type__title {
 					font-size: 2.5rem;
 					margin-top: 1.16rem;
 					color: $gray1;
+					display: inline-block;
 				}
 				.class-type__btn {
 					font-size: 1.35rem;
@@ -331,6 +441,7 @@ body {
 					margin-bottom: 5rem;
 					cursor: pointer;
 					@include transition(all 0.5s ease);
+					display: inline-block;
 					&:hover {
 						background-color: $blue;
 						color: $font-white;
